--- a/PythonKurs/.settings/org.eclipse.core.resources.prefs
+++ b/PythonKurs/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
-encoding//src/Aufgabe4.py=iso-8859-15
-encoding//src/RegEx1.py=iso-8859-15
+encoding//src/uebung4/Aufgabe4.py=iso-8859-15
+encoding//src/uebung5/AdressImport.py=iso-8859-15
+encoding//src/uebung5/RegEx1.py=iso-8859-15
