--- a/PythonKurs/.settings/org.eclipse.core.resources.prefs
+++ b/PythonKurs/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,6 @@ eclipse.preferences.version=1
 encoding//src/uebung4/Aufgabe4.py=iso-8859-15
 encoding//src/uebung5/AdressImport.py=iso-8859-15
 encoding//src/uebung5/RegEx1.py=iso-8859-15
+encoding//src/uebung6/Aufgabe1_DivDurch0.py=iso-8859-15
+encoding//src/uebung6/Aufgabe2_Parsen.py=iso-8859-15
+encoding//src/uebung6/Aufgabe3_RegEx.py=iso-8859-15
